# halo2-dynamic-sha256

./: .gitignore  Cargo.toml
benches/: digest.rs
src/: compression.rs  lib.rs  spread.rs  utils.rs
