[package]
name = "halo2-dynamic-sha256"
version = "0.1.0"
edition = "2018"
authors = ["Sora Suegami"]
description = "SHA256 verification circuit in halo2 supporting dynamic length input."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["halo2-pse"]
display = ["halo2-base/display", "halo2-ecc/display"]
halo2-pse = ["halo2-base/halo2-pse", "halo2-ecc/halo2-pse"]
halo2-axiom = ["halo2-base/halo2-axiom", "halo2-ecc/halo2-axiom"]

[dependencies]
halo2-base = { default-features = false, git = "https://github.com/automata-network/halo2-lib.git", branch = "develop" }
halo2-ecc = { default-features = false, git = "https://github.com/automata-network/halo2-lib.git", branch = "develop" }
log = "0.4"
generic-array = { version = "0.14.6", features = ["more_lengths"] }

# rand_xorshift = "0.3"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = { version = "0.10.6", features = ["compress"] }
hex = "0.4.3"
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "digest"
harness = false
